lib_LTLIBRARIES = libbase.la
libbase_la_SOURCES =
libbase_la_CFLAGS = $(AM_CFLAGS) $(MOTION_PLANNING_CFLAGS)
libbase_la_CXXFLAGS = $(AM_CXXFLAGS) $(MOTION_PLANNING_CXXFLAGS)
include_HEADERS = include/Box.hpp \
                  include/Point.hpp \
                  include/Box.ipp \
                  include/Point.ipp
libbase_la_LDFLAGS = -version-info 3:12:1